adding a simple controller that adds data to the database using a form

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Categories</h1>
-<%= link_to("Dodaj nową kategorie", "#") %>
+<%= link_to("Dodaj nową kategorie", :action => :new) %>
 <p>Ilość kategorii: <% @category.size %></p>
 
 
