--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,25 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<h1>Pokaz kategorie</h1>
+<%= link_to("Powrót", :action => "index") %>
+
+<table>
+  <tr>
+    <th>Nazwa</th>
+    <td><%= @category.name %></td>
+  </tr>
+  <tr>
+    <th>Pozycja</th>
+    <td><%= @category.position %></td>
+  </tr>
+  <tr>
+    <th>Czy widoczna?</th>
+    <td> <%= @category.visible ? "Tak" : "Nie"%></td>
+  </tr>
+  <tr>
+    <th>Utworzono</th>
+    <td><%= @category.created_at %></td>
+  </tr>
+  <tr>
+    <th>Zaktualizowano</th>
+    <td><%= @category.updated_at %></td>
+  </tr>
+</table>
