--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,7 +19,7 @@
     <th><%= categoryList.visible ? "Tak" : "Nie" %></th>
     <th><%= categoryList.pages.size %></th>
     <th><%= link_to("Pokaż", :action => "show", :id => categoryList.id) %></th>
-    <th><%= link_to("Edycja", "#") %></th>
+    <th><%= link_to("Edycja", :action => 'edit', :id => categoryList.id) %></th>
     <th><%= link_to("Usuń", :action => "delete", :id => categoryList.id) %></th>
   </tr>
   <% end %>
